--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,17 +5,25 @@
 
 .home_link {
     margin-right: auto;
+    display: flex;
+    text-decoration: none;
+    color: var(--link-color);
+    /* padding: 5px 10px 0px 10px; */
+}
+
+.home_logo_text {
+    display: none;
 }
 
 .link {
     display: flex;
     text-decoration: none;
-    color: var(--text-color);
-    padding: 1em 2em;
+    color: var(--link-color);
+    padding: 30px 2em;
 }
 
 .activeLink {
-    border-bottom: 2px solid var(--text-color);
+    border-bottom: 2px solid var(--link-color);
     background-color: var(--accent-color);
 }
 
@@ -25,7 +33,7 @@
 
 .nav {
     /* position: fixed; */
-    background-color: #4c5079;
+    background-color: var(--nav-background-color);
     color: var(--text-color);
     border-bottom: 1px solid var(--hover-color);
     z-index: 9;
@@ -105,6 +113,16 @@
 
     .home_link {
         margin-right: unset;
+    }
+
+    .home_link svg {
+        display: none;
+    }
+
+    .home_logo_text {
+        display: flex;
+        padding: 30px 32px 32px 30px;
+        width: 100%;
     }
 
     .overlay {
