--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -8,6 +8,9 @@
     --hover-color: #272832;
     --nav-background-color: #4c5079;
     --link-color: #fff;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,4 +30,9 @@ body {
     color: var(--foreground);
     background: var(--background);
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
