--- a/src/app/(frontend)/page.module.css
+++ b/src/app/(frontend)/page.module.css
@@ -1,21 +1,21 @@
-html,
-body {
+/* :global(html),
+:global(body) {
     height: 100%;
     margin: 0;
     display: flex;
     flex-direction: column;
-}
+} */
 
-#root,
+/* #root,
 #__next {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-}
+} */
 
-.main {
+/* .main {
     flex: 1;
-}
+} */
 
 .title {
     display: flex;
