--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -36,3 +36,12 @@ body {
     flex-direction: column;
     flex: 1;
 }
+
+.backgroundImageContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
