--- a/src/app/(frontend)/page.module.css
+++ b/src/app/(frontend)/page.module.css
@@ -1,22 +1,3 @@
-/* :global(html),
-:global(body) {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-} */
-
-/* #root,
-#__next {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-} */
-
-/* .main {
-    flex: 1;
-} */
-
 .title {
     display: flex;
     justify-content: center;
@@ -33,8 +14,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100vh;
-    background-color: var(--background);
+    height: calc(100vh - 86px);
+    /* background-color: var(--background); */
+    /* Gradient background */
+
     color: var(--foreground);
 }
 
@@ -96,5 +79,9 @@
 @media (max-width: 768px) {
     .heroImageContainer {
         display: none;
+    }
+
+    .hero {
+        height: 100vh;
     }
 }
