--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -11,15 +11,12 @@
     /* padding: 5px 10px 0px 10px; */
 }
 
-.home_logo_text {
-    display: none;
-}
-
 .link {
     display: flex;
     text-decoration: none;
     color: var(--link-color);
     padding: 30px 2em;
+    min-width: 100px;
 }
 
 .activeLink {
@@ -39,6 +36,10 @@
     z-index: 9;
 
     /* justify-content: space-between; */
+}
+
+.nav li {
+    display: flex;
 }
 
 .link:hover {
@@ -113,16 +114,6 @@
 
     .home_link {
         margin-right: unset;
-    }
-
-    .home_link svg {
-        display: none;
-    }
-
-    .home_logo_text {
-        display: flex;
-        padding: 30px 32px 32px 30px;
-        width: 100%;
     }
 
     .overlay {
