--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: var(--nav-background-color);
+    background-color: var(--Feldgrau);
     color: #fff;
     padding: 20px 0;
     text-align: center;
